--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,63 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
-:root{
-    --background: linear-gradient(to bottom, #74beff,#0044cc);
+
+:root {
+    --background: linear-gradient(90deg, rgba(145,189,226,1) 0%, rgba(87,163,225,1) 0%, rgba(36,115,177,1) 64%);
+    /* --background: radial-gradient(circle, rgba(72,169,215,1) 0%, rgba(62,114,176,1) 100%); */
 }
+
 input {
     outline: none !important;
     box-shadow: none !important;
 }
-button:focus, 
+
+button:focus,
 input:focus {
     outline: none !important;
     box-shadow: none !important;
 }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
 input[type="number"] {
-    -moz-appearance: textfield; /* For Firefox */
+    -moz-appearance: textfield;
+    /* For Firefox */
 }
 
 .form-wrapper {
-    transition: box-shadow 1.5s ease; /* Transition for box shadow */
+    transition: box-shadow 1.5s ease;
+    /* Transition for box shadow */
 }
 
 .highlight {
-    box-shadow: 0 0 5px rgba(78, 96, 171, 0.5), 
-                0 0 15px rgba(124, 121, 209, 0.8); /* Highlight box shadow */
-    animation: pulse 1s infinite; /* Use the pulse animation */
+    box-shadow: 0 0 5px rgba(78, 96, 171, 0.5),
+        0 0 15px rgba(124, 121, 209, 0.8);
+    /* Highlight box shadow */
+    animation: pulse 1s infinite;
+    /* Use the pulse animation */
 }
 
 @keyframes pulse {
     0% {
-        box-shadow: 0 0 5px rgba(78, 96, 171, 0.5), 
-                    0 0 15px rgba(124, 121, 209, 0.8);
+        box-shadow: 0 0 5px rgba(78, 96, 171, 0.5),
+            0 0 15px rgba(124, 121, 209, 0.8);
     }
+
     50% {
-        box-shadow: 0 0 10px rgba(124, 121, 209, 0.8), 
-                    0 0 25px rgba(124, 121, 209, 0.5);
+        box-shadow: 0 0 10px rgba(124, 121, 209, 0.8),
+            0 0 25px rgba(124, 121, 209, 0.5);
     }
+
     100% {
-        box-shadow: 0 0 5px rgba(78, 96, 171, 0.5), 
-                    0 0 15px rgba(124, 121, 209, 0.8);
+        box-shadow: 0 0 5px rgba(78, 96, 171, 0.5),
+            0 0 15px rgba(124, 121, 209, 0.8);
     }
 }
-
-
